Harmonize shared configs with premium design updates

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,32 @@
-# Supabase configuration
-SUPABASE_URL=https://oulwcijxeklxllufyofb.supabase.co
-SUPABASE_SERVICE_ROLE=
-SUPABASE_ANON_KEY=
-
-# JWT secret used by Supabase Edge functions or the API service
-JWT_SECRET=
-
-# Gemini AI integration (optional)
-GEMINI_API_KEY=
-
-# Google Maps API key (frontend usage)
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
-
-# Realtime flag for clients
-NEXT_PUBLIC_REALTIME_ENABLED=true
-
-# Shared Supabase credentials for web clients
+# Configuração do Supabase (Frontend)
 NEXT_PUBLIC_SUPABASE_URL=https://oulwcijxeklxllufyofb.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
-# Optional fallback support for Vite based builds
+# Configuração do Supabase (Backend / scripts)
+SUPABASE_URL=https://oulwcijxeklxllufyofb.supabase.co
+SUPABASE_SERVICE_ROLE=
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+
+# JWT secret usado pelo Supabase (Edge Functions / API)
+JWT_SECRET=
+
+# Configuração do Google Maps (opcional)
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
+VITE_GOOGLE_MAPS_API_KEY=
+
+# Configuração do Gemini AI (opcional)
+GEMINI_API_KEY=
+VITE_GEMINI_API_KEY=
+
+# Variáveis auxiliares para projetos Vite/CLI
 VITE_SUPABASE_URL=https://oulwcijxeklxllufyofb.supabase.co
 VITE_SUPABASE_ANON_KEY=
-VITE_GEMINI_API_KEY=
-VITE_GOOGLE_MAPS_API_KEY=
+
+# Flags de Realtime
+NEXT_PUBLIC_REALTIME_ENABLED=true
 VITE_REALTIME_ENABLED=true
+
+# Configuração do ambiente
+NODE_ENV=development
+NEXT_PUBLIC_APP_URL=http://localhost:3000
