chore(monorepo): scaffold apps/api, shared clients; add Supabase SQL + seeds; update CI to pnpm; add deploy workflow and env examples

--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,25 @@
-# Configuração do Supabase (Frontend)
-NEXT_PUBLIC_SUPABASE_URL=https://oulwcijxeklxllufyofb.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# Configuração unificada de ambiente
 
-# Configuração do Supabase (Backend / scripts)
-SUPABASE_URL=https://oulwcijxeklxllufyofb.supabase.co
-SUPABASE_SERVICE_ROLE=
-SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
-
-# JWT secret usado pelo Supabase (Edge Functions / API)
-JWT_SECRET=
-
-# Configuração do Google Maps (opcional)
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
-VITE_GOOGLE_MAPS_API_KEY=
-
-# Configuração do Gemini AI (opcional)
-GEMINI_API_KEY=
-VITE_GEMINI_API_KEY=
-
-# Variáveis auxiliares para projetos Vite/CLI
+# Frontend (Vite)
 VITE_SUPABASE_URL=https://oulwcijxeklxllufyofb.supabase.co
 VITE_SUPABASE_ANON_KEY=
-
-# Flags de Realtime
-NEXT_PUBLIC_REALTIME_ENABLED=true
+VITE_GOOGLE_MAPS_API_KEY=
+VITE_GEMINI_API_KEY=
 VITE_REALTIME_ENABLED=true
 
-# Configuração do ambiente
-NODE_ENV=development
+# Next.js (se aplicável)
+NEXT_PUBLIC_SUPABASE_URL=https://oulwcijxeklxllufyofb.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
+NEXT_PUBLIC_REALTIME_ENABLED=true
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Backend/API
+SUPABASE_URL=https://oulwcijxeklxllufyofb.supabase.co
+SUPABASE_SERVICE_ROLE=
+JWT_SECRET=
+GEMINI_API_KEY=
+
+# Ambiente
+NODE_ENV=development
+
