--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "golffox-management-panel",
   "private": true,
   "version": "0.0.0",
+  "workspaces": [
+    "apps/*",
+    "packages/*",
+    "api"
+  ],
   "scripts": {
     "dev": "next dev -p 3000 -H 0.0.0.0",
     "build": "next build",
     "start": "next start -p 3000 -H 0.0.0.0",
     "lint": "next lint",
+    "dev:all": "pnpm -r --parallel --filter ./apps/* dev",
+    "build:all": "pnpm -r build",
+    "lint:all": "pnpm -r lint",
+    "typecheck:all": "pnpm -r typecheck",
     "verify-supabase": "node scripts/verify-supabase.js",
     "setup-project": "node scripts/setup-project.js",
     "db:status": "node scripts/verify-supabase.js",
