--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "packageManager": "pnpm@9.12.0",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
@@ -23,4 +24,3 @@
     "@types/node": "^22.14.0"
   }
 }
-
