--- a/api/package.json
+++ b/api/package.json
@@ -13,14 +13,16 @@
   "dependencies": {
     "@google/genai": "^1.20.0",
     "@hono/node-server": "^1.13.9",
-    "hono": "^4.6.13",
+    "@supabase/supabase-js": "^2.57.4",
     "dotenv": "^17.2.2",
-    "@supabase/supabase-js": "^2.57.4"
+    "hono": "^4.6.13",
+    "pg": "8.11.5"
   },
   "devDependencies": {
-    "tsx": "^4.20.5",
-    "typescript": "~5.8.2",
+    "@types/node": "^22.14.0",
+    "@types/pg": "8.10.9",
     "eslint": "^9.36.0",
-    "@types/node": "^22.14.0"
+    "tsx": "^4.20.5",
+    "typescript": "~5.8.2"
   }
 }
