--- a/api/package.json
+++ b/api/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "golffox-api",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "packageManager": "pnpm@9.12.0",
-  "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@google/genai": "^1.20.0",
-    "@hono/node-server": "^1.13.9",
-    "@supabase/supabase-js": "^2.57.4",
-    "dotenv": "^17.2.2",
-    "hono": "^4.6.13",
-    "pg": "8.11.5"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@types/pg": "8.10.9",
-    "eslint": "^9.36.0",
-    "tsx": "^4.20.5",
-    "typescript": "~5.8.2"
-  }
+    "name":  "golffox-api",
+    "private":  true,
+    "version":  "0.0.1",
+    "type":  "module",
+    "packageManager":  "pnpm@9.12.0",
+    "scripts":  {
+                    "dev":  "tsx watch src/index.ts",
+                    "build":  "tsc -p tsconfig.json \u0026\u0026 node dist/setup-runner.js",
+                    "start":  "node dist/index.js",
+                    "lint":  "eslint ."
+                },
+    "dependencies":  {
+                         "@google/genai":  "^1.20.0",
+                         "@hono/node-server":  "^1.13.9",
+                         "@supabase/supabase-js":  "^2.57.4",
+                         "dotenv":  "^17.2.2",
+                         "hono":  "^4.6.13",
+                         "pg":  "8.11.5"
+                     },
+    "devDependencies":  {
+                            "@types/node":  "^22.14.0",
+                            "@types/pg":  "8.10.9",
+                            "eslint":  "^9.36.0",
+                            "tsx":  "^4.20.5",
+                            "typescript":  "~5.8.2"
+                        }
 }
