--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "@supabase/supabase-js": "^2.57.4"
+    "@supabase/supabase-js": "^2.57.4",
+    "framer-motion": "^12.23.21",
+    "lucide-react": "^0.544.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "vite": "^5.4.10",
