feat(vercel): add vercel configs for all apps and update env vars
refactor(globals.css): replace tailwind directives with direct imports
fix(middleware): add CORS support for vercel domains
chore: update supabase connection details and verify script

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # Backend/API
 SUPABASE_URL=https://oulwcijxeklxllufyofb.supabase.co
 SUPABASE_SERVICE_ROLE=
+SUPABASE_SERVICE_ROLE_KEY=
 JWT_SECRET=
 GEMINI_API_KEY=
 
