feat(auth): add admin provisioning and secure dev bypass
- Add SETUP_ADMIN_TOKEN to env files for secure admin provisioning
- Implement new API endpoint for admin provisioning with token auth
- Restrict dev bypass login to non-production environments
- Update deploy script to handle new environment variables
- Replace sensitive keys with dummy values in local env

--- a/.env.local.example
+++ b/.env.local.example
@@ -14,3 +14,4 @@ GEMINI_API_KEY=sua_chave_gemini_aqui
 # Configuração do ambiente
 NODE_ENV=development
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+SETUP_ADMIN_TOKEN=defina_um_token_secreto_aqui
