--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -10,7 +10,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vite/client"],
+    "types": ["vite/client", "google.maps"],
+    "typeRoots": ["../../node_modules/@types", "../../src/types"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["../../*"]
